--- a/NetDeliveryAppWeb/public/css/Styles.css
+++ b/NetDeliveryAppWeb/public/css/Styles.css
@@ -26,11 +26,41 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 
+.modalOpt {
+    background-color: #485461;
+    background-image: linear-gradient(315deg, #515355 0%, #24282c 74%);
+    height: 40px;
+}
+
+.modalOpt h5 {
+    font-family: 'PT Sans', sans-serif;
+    text-indent: 25px;
+    line-height: 40px;
+    vertical-align: middle;
+    color: #efe;
+}
+
+.titulo {
+    white-space: pre;
+    font-size: 25px;
+    text-align: center;
+    font-weight: bold;
+}
+
 .card-text {
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-size: medium;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 150px;
+    max-width: 500px;
+}
+
+.produto-valor {
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-size: medium;
 }
 
 body {
