--- a/NetDeliveryAppWeb/public/css/Styles.css
+++ b/NetDeliveryAppWeb/public/css/Styles.css
@@ -26,6 +26,12 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 
+.fButton{
+    text-align:center;
+    position:fixed;
+    bottom:auto;
+}
+
 .modalOpt {
     background-color: #485461;
     background-image: linear-gradient(315deg, #515355 0%, #24282c 74%);
