--- a/NetDeliveryAppWeb/public/css/Styles.css
+++ b/NetDeliveryAppWeb/public/css/Styles.css
@@ -26,10 +26,17 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 
-.fButton{
-    text-align:center;
-    position:fixed;
-    bottom:auto;
+#carrinhoBtn {
+    text-align: center;
+    font-size:larger;
+    position: fixed;
+    justify-content: center;
+    bottom: 3px;
+    left: 3px;
+    right: 3px;
+    width: 99%;
+    background-color: #efef;
+    margin: 0 auto;
 }
 
 .modalOpt {
